--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         <h2 class="heading">Experience</h2>
         <div class="experience-container">
             <div class="experience-box">
-                <h4>Cybersecurity Engineer - ABC Tech</h4>
+                <h4>Cybersecurity Engineer - Red Team (Penetration Test)</h4>
                 <p>2024 - Present | Designed and implemented secure systems, conducted penetration testing, and trained teams on best security practices.</p>
             </div>
             <div class="experience-box">
-                <h4>Software Developer - XYZ Solutions</h4>
+                <h4>Software Developer - AI & Message Encoder</h4>
                 <p>2023 - 2024 | Developed web applications and optimized backend performance using Python and JavaScript.</p>
             </div>
         </div>
